data/derived/comb/progs/unify/prog3663.ml.out
Characters 108-155:
  if prod > 10 then (prod mod 10)::( (prod / 10)+(mulByDigit i t) )
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
